# code-coverage-integration-testing

./: .gitignore  CHANGELOG.md  Makefile  README.md  cdk.json  load_test.py  pyproject.toml  requirements-dev.txt
.amazonq/rules/: infra.md
.kiro/specs/lambda-coverage-layer/: design.md  requirements.md  tasks.md
cdk/: app.py  lambda_coverage_layer_stack.py
docs/: API.md  CONFIGURATION.md  TROUBLESHOOTING.md  USAGE.md
examples/: README.md
examples/advanced_usage/: README.md  advanced_example.py
examples/combiner_function/: README.md  combiner_example.py
examples/context_manager_function/: README.md  context_manager_example.py
examples/health_check_function/: README.md  health_check_example.py
examples/simple_function/: README.md  simple_example.py
layer/: requirements.txt
layer/python/coverage_wrapper/: __init__.py  combiner.py  error_handling.py  health_check.py  logging_utils.py  models.py  s3_uploader.py  wrapper.py
scripts/: build-layer.sh  deploy-layer.sh  validate-layer.sh  version-manager.sh
tests/: __init__.py  test_combiner.py  test_error_handling.py  test_health_check.py  test_logging_utils.py  test_models.py  test_s3_uploader.py  test_wrapper.py
